--- a/NGINX/index.html
+++ b/NGINX/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>GG</title>
-    </head>
-    <body>
-        <h1>GG</h1>
-        <p>GG</p>
-        <p>GG</p>
-        <p>GG</p>
-        <p>GG</p>
-        <p>GG</p>
-        <p>GG</p>
-    </body>
+  <head>
+    <style>
+      body {
+        background-color: lightgrey;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+      }
+      h1 {
+        color: rgb(103, 164, 184);
+        text-align: center;
+        font-size: 10em;
+      }
+      p {
+          color: rgb(32, 75, 88);
+          text-align: center;
+          font-size: 3em;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>iMad</h1>
+    <br>
+    <p>just testing this fabolous thing</p>
+  </body>
 </html>
