--- a/NGINX/index.html
+++ b/NGINX/index.html
@@ -24,6 +24,6 @@
   <body>
     <h1>iMad</h1>
     <br>
-    <p>just testing this fabolous thing</p>
+    <p>just testing this fabulous thing</p>
   </body>
 </html>
